# research-agent

./: .gitignore  AGENTS.md  CLAUDE.md  pyproject.toml
.claude/skills/report/: SKILL.md
examples/: run_demo.py
experiments/: hotpotqa_ablation.py  hotpotqa_ablation_results.json  hotpotqa_fast.py  hotpotqa_results.json  rag_ablation.py  rag_ablation_results.json
infrastructure/: capture.py
memory/: experiments.md  task_board.md
memory/retro/: engineering.md  multi_agent.md  rag_strategies.md  retrieval_optimization.md
research/: __init__.py  pipeline.py
research/agents/: __init__.py  base.py  critic.py  planner.py  reader.py  retriever.py  writer.py
research/coordinator/: __init__.py  coordinator.py
research/memory/: __init__.py  experience_store.py
research/rag/: __init__.py  chunker.py  retriever.py  vector_store.py
research/tools/: __init__.py  all_tools.py  embedding.py  llm.py  pdf_parser.py  registry.py  reranker.py  search.py
research/trace/: __init__.py
tests/: test_agents.py  test_coordinator.py  test_rag.py
