[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "research-agent"
version = "0.1.0"
description = "自进化多 Agent 学术研究系统 — Multi-agent + RAG + Experience-enhanced Retrieval"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "leeleelxl"}]
keywords = ["agent", "multi-agent", "rag", "research", "self-evolving"]
dependencies = ["numpy"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
full = ["faiss-cpu", "sentence-transformers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
